# ActionRPG-In_Progress-

./: .gitignore  README.md  project.godot
ActionRPG(In_Progress)/src/engine/: game_loop.cpp  game_loop.h  renderer.cpp  vulkan_renderer.cpp
ActionRPG(In_Progress)/src/game/: character.cpp  character.h  enemy.h  item.cpp  item.h  item_drop.h  level.cpp  level.h  visual_effect.h
ActionRPG(In_Progress)/src/ui/: character_select.cpp  inventory_ui.cpp  ui_system.cpp  ui_system.h
_legacy_cpp/ActionRPG(In_Progress)/: CMakeLists.txt  compile_shaders.bat
_legacy_cpp/ActionRPG(In_Progress)/shaders/: shader.frag
_legacy_cpp/ActionRPG(In_Progress)/spirv/: frag.spv
_legacy_cpp/ActionRPG(In_Progress)/src/: main.cpp
_legacy_cpp/ActionRPG(In_Progress)/src/engine/: renderer.h  temp_renderer_extension.cpp  vertex.h  vulkan_renderer.h
_legacy_cpp/ActionRPG(In_Progress)/src/game/: enemy.cpp  item.cpp  item_drop.cpp  visual_effect.cpp
_legacy_cpp/ActionRPG(In_Progress)/src/ui/: character_select.h  inventory_ui.h
assets/: Tinker_Title_Screen.png.import
assets/icons/: icon_blaster.png.import  icon_plating.png.import  icon_scrap.png.import
design/: loot_system.md
resources/classes/: juggernaut.tres
resources/equipment/: basic_plating.tres  rusty_blaster.tres
resources/items/: scrap_metal.tres
scenes/: enemy.tscn  main.tscn  player.tscn  projectile.tscn
scenes/enemies/: ranged_enemy.tscn
scenes/skills/: ground_slam.tscn
scenes/systems/: world_item.tscn
scenes/tiles/: floor_tile.tscn  wall_tile.tscn
scenes/ui/: hud.tscn  inventory_slot.tscn  inventory_ui.tscn  minimap.tscn
scripts/: enemy.gd  enemy.gd.uid  level_generator.gd  level_generator.gd.uid  player.gd  player.gd.uid  projectile.gd  projectile.gd.uid
scripts/enemies/: enemy_base.gd  enemy_base.gd.uid  enemy_ranged.gd  enemy_ranged.gd.uid
scripts/resources/: equipment.gd  equipment.gd.uid  item.gd  item.gd.uid  robot_class.gd  robot_class.gd.uid
scripts/skills/: ground_slam.gd  ground_slam.gd.uid
scripts/systems/: inventory.gd  inventory.gd.uid  world_item.gd  world_item.gd.uid
scripts/tiles/: wall.gd  wall.gd.uid
scripts/ui/: hud.gd  hud.gd.uid  inventory_slot.gd  inventory_slot.gd.uid  inventory_ui.gd  inventory_ui.gd.uid  minimap.gd  minimap.gd.uid
